--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,9 @@
             android:name=".Main2Activity"
             android:label="SoFutebol"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Main3Activity"></activity>
-        <activity android:name=".Main4Activity"></activity>
+        <activity android:name=".Main3Activity" />
+        <activity android:name=".Main4Activity" />
+        <activity android:name=".Main5Activity"></activity>
     </application>
 
 </manifest>
